--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript">
-		alert("Why do you write me?");
-		alert("Do you know what i see you?");
-		alert("You, little goblin.");
-		alert("Don't off the light.");
+		alert();
 	</script>
 	<title></title>
 </head>
